# LLM-Attention-DeepDive

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: TUTORIAL.md  architecture.md
profiling/: rocprof_counters.txt
scripts/: analyze_results.py  run_benchmarks.sh
src/: attention_common.h  attention_flash.hip  attention_naive.hip  attention_shared.hip  benchmark_compare.hip
tests/: test_attention.py
