[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-attention-deepdive"
version = "1.0.0"
description = "Deep dive into LLM attention mechanisms with HIP kernels"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Sudheer Devu"}
]
keywords = ["llm", "attention", "hip", "rocm", "gpu", "transformer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/sudheerdevu/LLM-Attention-DeepDive"
Repository = "https://github.com/sudheerdevu/LLM-Attention-DeepDive"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
